--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 <p><span class="big-par fragment">- <em>¿Qué pasa con las ciencias sociales?</em></span></p>
 <p><span class="big-par fragment">- <em>Ciencia de datos e IA en el INE</em></span></p>
 <p><span class="big-par fragment">- <em>Nuevas habilidades demandadas</em></span></p>
-<p><span class="big-par fragment">- <em>¿Cuali v/s Cuanti?</em></span></p>
+<p><span class="big-par fragment">- <em>¿Cuanti v/s Cuali?</em></span></p>
 </section></section>
 <section>
 <section id="section-1" class="title-slide slide level1 center" data-background-color="white" data-transition="slide">
@@ -521,6 +521,22 @@ Aumento de costos
 </div>
 </div>
 </div>
+</section></section>
+<section>
+<section id="section-3" class="title-slide slide level1 center" data-background-color="white" data-transition="slide">
+<h1></h1>
+<p><span class="big-par2">Ciencia de datos e IA en el INE</span></p>
+</section>
+<section id="organización-del-equipo-de-ciencia-de-datos" class="slide level2" data-transition="convex">
+<h2>Organización del equipo de ciencia de datos</h2>
+<div style="text-align: center;">
+<p><img src="imagenes/organigrama.png" style="width:900px;"></p>
+</div>
+</section></section>
+<section>
+<section id="section-4" class="title-slide slide level1 center" data-background-color="white" data-transition="slide">
+<h1></h1>
+<p><span class="big-par2">Principales proyectos y aplicaciones</span></p>
 </section>
 <section id="aplicaciones-de-codificación-automática" class="slide level2" data-transition="convex">
 <h2>Aplicaciones de codificación automática</h2>
@@ -558,9 +574,9 @@ Aumento de costos
 <div style="text-align: center; display: flex; justify-content: center; align-items: flex-start;">
 <p><img src="imagenes/estandar.JPG" style="width:300px; margin-right: 20px;"> <img src="imagenes/lumley.JPG" style="width:500px; margin-top: 40px;"></p>
 </div>
-<p>Tiene <strong>8207 descargas totales</strong> hasta ayer</p>
-<p>Tiene <strong>322 descargas</strong> el último mes</p>
-<p>Tiene <strong>100 descargas</strong> la última semana</p>
+<p>Tiene <strong>9294 descargas totales</strong> hasta la semana pasada</p>
+<p>Tiene <strong>367 descargas</strong> el último mes</p>
+<p>Tiene <strong>79 descargas</strong> la última semana</p>
 <p><span class="medium-par"><img src="imagenes/GitHub-icon.png" alt="GitHub" style="width:40px; vertical-align:middle;"> <a href="https://github.com/inesscc/calidad">https://github.com/inesscc/calidad</a></span></p>
 </section>
 <section id="estratificación-con-imágenes-satelitales" class="slide level2" data-transition="convex">
@@ -620,7 +636,7 @@ Aumento de costos
 <p><br></p>
 <p><strong>¿Qué son los paradatos?</strong></p>
 <p>Son todos los <strong>registros brutos de cada acción</strong> que se realiza en las entrevistas (dispositivos móviles de captura)</p>
-<p><strong>Son datos grandes:</strong> Durante el levantamiento de ENUSC 2023 se alcanzó un total de <strong>66.375.084</strong> observaciones</p>
+<p><strong>Son datos grandes:</strong> durante el levantamiento de ENUSC 2023 se alcanzó un total de <strong>66.375.084</strong> observaciones</p>
 <p>Permiten <strong>detectar desviaciones</strong> en la correcta aplicación de una encuesta</p>
 <p>Es el caso de uso más profundo de un <strong>Lago de Datos</strong></p>
 <p>La salida de este flujo de datos es un <strong>dashboard con tablas y visualizaciones</strong></p>
@@ -738,54 +754,74 @@ Aumento de costos
 </div>
 </section></section>
 <section>
-<section id="section-3" class="title-slide slide level1 center" data-background-color="white" data-transition="slide">
+<section id="section-5" class="title-slide slide level1 center" data-background-color="white" data-transition="slide">
 <h1></h1>
-<p><span class="big-par2">Herramientas y arquitectura</span></p>
+<p><span class="big-par2">Nuevas habilidades demandadas</span></p>
 </section>
-<section id="propuesta-arquitectura-para-una-oficina-estadística" class="slide level2" data-transition="convex">
-<h2>Propuesta arquitectura para una oficina estadística</h2>
+<section id="nuevas-habilidades-demandadas" class="slide level2" data-transition="convex">
+<h2>Nuevas habilidades demandadas</h2>
 <div style="text-align: center; display: flex; justify-content: center; align-items: flex-start;">
-<p><img src="imagenes/arquitectura-lago.jpg" style="width:1000px; margin-right: 20px;"></p>
+<p><img src="imagenes/nuevas_habilidades.png" style="width:900px; margin-right: 20px;"></p>
 </div>
+</section>
+<section id="nuevas-habilidades-demandadas-1" class="slide level2" data-transition="convex">
+<h2>Nuevas habilidades demandadas</h2>
+<p><br></p>
+<p><span class="big-par fragment">- La sociología entra en el campo de las <strong>tecnologías de la información</strong></span></p>
+<p><span class="big-par fragment">- Mayor colaboración profesionales de la informática</span></p>
+<p><span class="big-par fragment">- <strong>Disposición a estudiar y aprender nuevas herramientas constantemente</strong></span></p>
+<p><span class="big-par fragment">- Mayor disposición a <strong>salir de nuestra zona de confort</strong></span></p>
+<p><span class="big-par fragment">- Apertura hacia nuevas metodologías y fuentes de información</span></p>
 </section></section>
 <section>
-<section id="section-4" class="title-slide slide level1 center" data-background-color="white" data-transition="slide">
+<section id="section-6" class="title-slide slide level1 center" data-background-color="white" data-transition="slide">
 <h1></h1>
-<p><span class="big-par2">Oportunidades y desafíos para la ciencia de datos en el sector público</span></p>
+<p><span class="big-par2">¿Cuanti v/s Cuali?</span></p>
 </section>
-<section id="oportunidades-y-desafios" class="slide level2" data-transition="convex">
-<h2>Oportunidades y desafios</h2>
-<div class="panel-tabset">
-<ul id="tabset-9" class="panel-tabset-tabby"><li><a data-tabby-default="" href="#tabset-9-1"><span class="medium-par">Oportunidades</span></a></li><li><a href="#tabset-9-2"><span class="medium-par">Desafios</span></a></li></ul>
-<div class="tab-content">
-<div id="tabset-9-1">
-<ul>
-<li><p>La ciencia de datos tiene un gran potencial para <strong>optimizar procesos en el sector público</strong></p></li>
-<li><p>Con el avance tecnológico en <em>hardware</em> y el <strong>boom de la inteligencia artificial</strong> se ha abierto un importante <strong>campo interdisciplinario entre los equipos técnicos y de tecnología</strong></p></li>
-<li><p>Se abre la oportunidad de aprovechar <strong>fuentes no tradicionales</strong> de información (imágenes satelitales, datos de telefonía celular, etc.)</p></li>
-<li><p>Posibilidad de ampliar la oferta estadística <span>→</span> <strong>estadísticas experimentales basadas en ciencia de datos</strong></p></li>
-</ul>
-</div>
-<div id="tabset-9-2">
-<ul>
-<li><p><strong>No ha sido fácil llegar a donde estamos</strong> (tensión entre lo <strong>urgente</strong> y lo <strong>estrétegico</strong>)</p></li>
-<li><p><strong>Brechas en capital humano en el estado</strong> / sueldos menos competitivos que en el sector privado para equipos de tecnología y nuevos perfiles</p></li>
-<li><p><strong>Poca infraestructura informática</strong> en el Estado y en general <strong>antigua</strong></p></li>
-<li><p><strong>Restricciones normativas</strong> para la migración a <em>cloud</em>, que podría ser más ágil</p></li>
-<li><p>Dificultades para la compra de infraestructura informática más moderna</p></li>
-</ul>
-</div>
-</div>
+<section id="cuanti-vs-cuali" class="slide level2" data-transition="convex">
+<h2>¿Cuanti v/s Cuali?</h2>
+<div style="text-align: center; display: flex; justify-content: center; align-items: flex-start;">
+<p><img src="imagenes/cuanticuali.jpg" style="width:800px; margin-right: 20px;"></p>
 </div>
 </section>
-<section id="contacto" class="slide level2" data-transition="convex">
-<h2>Contacto</h2>
-<p><br> <br> <br> <br></p>
-<p><span class="big-par"><strong>Ignacio Agloni</strong></span></p>
-<p><span class="medium-par">Jefe Unidad de Gobierno de Datos - Instituto Nacional de Estadísticas</span> <br></p>
-<p><span class="medium-par"><img src="imagenes/outlook-icon.png" alt="Outlook" style="width:60px; vertical-align:middle;"> ifaglonij@ine.gob.cl</span></p>
+<section id="cuanti-vs-cuali-1" class="slide level2" data-transition="convex">
+<h2>¿Cuanti v/s Cuali?</h2>
+<p><span class="medium-par">Si quisiéramos estudiar la <strong>ideología de los partidos</strong>, usando sus <strong>declaraciones de principios</strong></span></p>
+<div style="text-align: center; display: flex; justify-content: center; align-items: flex-start;">
+<p><img src="imagenes/ejemplo_declaracion.png" style="width:800px; margin-right: 20px;"></p>
+</div>
+<p><span class="medium-par center">¿Qué enfoque o estrategia se adecúa mejor a este problema? ¿<strong>Cuantitativo o cualitativo</strong>?</span></p>
+</section>
+<section id="wordfish-slapin-proksch-2008" class="slide level2" data-transition="convex">
+<h2>Wordfish (Slapin &amp; Proksch, 2008)</h2>
+<p><br></p>
+<p><span class="medium-par">Hacemos un pre procesamiento, para <strong>representar el texto de manera numérica</strong></span></p>
+<p><br></p>
+<p><span class="math inline">\(y_{ij}=Poisson(\lambda_{ij})\)</span><br></p>
+<p><span class="math inline">\(\lambda_{ij} = exp(\alpha_{i} + ψ_j + β_j ∗ ω_{i})\)</span><br></p>
+<p><span class="math inline">\(j\)</span>: palabra<br></p>
+<p><span class="math inline">\(i\)</span>: partido<br></p>
+<p><span class="math inline">\(ω\)</span>: Parámetro que indica la posición de un actor/partido<br></p>
+<p><span class="math inline">\(β\)</span>: Poder discriminador de las palabras<br></p>
+</section>
+<section id="posicionamiento-ideológico" class="slide level2" data-transition="convex">
+<h2>Posicionamiento “ideológico”</h2>
+<div style="text-align: center; display: flex; justify-content: center; align-items: flex-start;">
+<p><img src="imagenes/wordfish_declaraciones.png" style="width:700px; margin-right: 20px;"></p>
+</div>
+</section>
+<section id="poder-descriminador-de-palabras" class="slide level2" data-transition="convex">
+<h2>Poder descriminador de palabras</h2>
+<div style="text-align: center; display: flex; justify-content: center; align-items: flex-start;">
+<p><img src="imagenes/palabras.png" style="width:750px; margin-right: 20px;"></p>
+</div>
 </section></section>
-<section id="section-5" class="title-slide slide level1 center">
+<section id="section-7" class="title-slide slide level1 center" data-background-color="white" data-transition="slide">
+<h1></h1>
+<p><span class="big-par2">¿Esta es una investigación cuanti o cuali?</span></p>
+</section>
+
+<section id="section-8" class="title-slide slide level1 center">
 <h1></h1>
 <p><span class="linea-superior"></span> <span class="linea-inferior"></span></p>
 <!---
@@ -793,9 +829,9 @@ Aumento de costos
 --->
 <p><img src="imagenes/logo_portada2.png" width="20%"></p>
 <p><span class="big-par center-justified"><strong>GRACIAS</strong></span></p>
-<p><span class="big-par center-justified"><strong>CIENCIA DE DATOS PARA EL SECTOR PÚBLICO</strong></span></p>
+<p><span class="big-par center-justified"><strong>CIENCIA DE DATOS E INTELIGENCIA ARTIFICIAL PARA LA PRODUCCIÓN ESTADÍSTICA</strong></span></p>
 <p><span class="big-par center-justified"><strong>La experiencia del Instituto Nacional de Estadísticas</strong></span></p>
-<p><span class="big-par center-justified"><strong>Agosto 2024</strong></span></p>
+<p><span class="big-par center-justified"><strong>Diciembre 2024</strong></span></p>
 <div class="quarto-auto-generated-content">
 <p><img src="imagenes/logo_portada2.png" class="slide-logo"></p>
 <div class="footer footer-default">
