--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 <section id="empresas-que-manejan-muchos-datos" class="slide level2" data-transition="convex">
 <h2>Empresas que manejan muchos datos</h2>
 <div style="text-align: center;">
-<p><img src="imagenes/marcas.png" style="width:1200px;" class="fragment" data-fragment-index="1"></p>
+<p><img src="imagenes/marcas.PNG" style="width:1200px;" class="fragment" data-fragment-index="1"></p>
 </div>
 </section>
 <section id="qué-información-se-registra-actualmente" class="slide level2" data-transition="convex">
@@ -418,7 +418,7 @@
 <h2>¿Quién explota esta información?</h2>
 <p><br></p>
 <div style="text-align: center; margin-top: 20px; display: flex; justify-content: center;">
-<p><img src="imagenes/ejemplo_empresas.png" style="width:400px; margin-right: 40px;" class="fragment" data-fragment-index="1"> <img src="imagenes/ingeniero_informatico.jpeg" style="width:400px;" class="fragment" data-fragment-index="2"></p>
+<p><img src="imagenes/ejemplo_empresas.PNG" style="width:400px; margin-right: 40px;" class="fragment" data-fragment-index="1"> <img src="imagenes/ingeniero_informatico.jpeg" style="width:400px;" class="fragment" data-fragment-index="2"></p>
 </div>
 <p style="text-align: center; font-size: 1.3em;" class="medium-par fragment big-par">
 ¿Científicas/os de datos?
@@ -530,7 +530,7 @@ Aumento de costos
 <section id="organización-del-equipo-de-ciencia-de-datos" class="slide level2" data-transition="convex">
 <h2>Organización del equipo de ciencia de datos</h2>
 <div style="text-align: center;">
-<p><img src="imagenes/organigrama.png" style="width:900px;"></p>
+<p><img src="imagenes/organigrama.PNG" style="width:900px;"></p>
 </div>
 </section></section>
 <section>
@@ -813,7 +813,7 @@ Aumento de costos
 <section id="poder-descriminador-de-palabras" class="slide level2" data-transition="convex">
 <h2>Poder descriminador de palabras</h2>
 <div style="text-align: center; display: flex; justify-content: center; align-items: flex-start;">
-<p><img src="imagenes/palabras.png" style="width:750px; margin-right: 20px;"></p>
+<p><img src="imagenes/palabras.PNG" style="width:750px; margin-right: 20px;"></p>
 </div>
 </section></section>
 <section id="section-7" class="title-slide slide level1 center" data-background-color="white" data-transition="slide">
